fixed extension card alignment

--- a/app/css/_container.scss
+++ b/app/css/_container.scss
@@ -4,6 +4,6 @@
   padding: 30px 85px 0 150px;
 
   @include breakpoint(small) {
-    padding: 30px 25px;
+    padding: 30px 30px;
   }
 }
