--- a/app/css/_global.scss
+++ b/app/css/_global.scss
@@ -72,6 +72,7 @@ button {
   padding: 1em 2em;
   font-family: $family;
   font-size: 0.75rem;
+  font-weight: 500;
 }
 
 .red-btn {
